# df-lib

./: .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  devenv.nix  pyproject.toml
src/: duckdb-billion.py  duckdb-tutorial.py  polars-billion.py  polars-sample-slow.py  polars-tutorial.py  ray-core.py  ray-data.py  ray-env.py  ray-tips.py
