[tool.poetry]
name = "df-lib"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
polars = "^1.3.0"
ray = {extras = ["default"], version = "^2.34.0"}
duckdb = "^1.0.0"
ipython = "^8.26.0"
black = "^24.4.2"
pyarrow = "^17.0.0"
faker = "^26.1.0"
vulture = "^2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
